dashboard for practice

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <h2>Simranjeet Singh</h2>
             <h4>singhsimran156@gmail.com</h4>
         </div>
-        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Simranjeet singh">
+        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Simranjeet Singh">
     </div>
 
     <mat-divider></mat-divider>
